[gd_scene load_steps=8 format=3 uid="uid://dm6ydcq6bkfx4"]

[ext_resource type="Script" path="res://puzzle_magic_book/post-it-item/scripts/post_it.gd" id="1_1tpli"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="2_q6b8c"]
[ext_resource type="Resource" uid="uid://dj0y6v6u4wbx1" path="res://puzzle_magic_book/post-it-item/data/post-it.tres" id="2_xv4wl"]
[ext_resource type="Texture2D" uid="uid://cxx06vetlfmqp" path="res://levels/splash_screen/STAR dice white.png" id="3_rm3ma"]
[ext_resource type="PackedScene" uid="uid://cxrfji6xsmwwg" path="res://highlight_component/highlight_component.tscn" id="5_67i0s"]
[ext_resource type="Material" uid="uid://c8nsf6sr6vqbg" path="res://highlight_component/new_shader_material.tres" id="6_mc28a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnnpb"]
size = Vector2(63, 66)

[node name="Post-it" type="Node2D"]
script = ExtResource("1_1tpli")
item = ExtResource("2_xv4wl")

[node name="Interactable" parent="." instance=ExtResource("2_q6b8c")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
shape = SubResource("RectangleShape2D_mnnpb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.500001, 0.499999)
scale = Vector2(0.167549, 0.146127)
texture = ExtResource("3_rm3ma")

[node name="Label" type="Label" parent="."]
offset_left = -52.0
offset_top = -63.0
offset_right = 58.0
offset_bottom = -40.0
text = "Pick up Post-it"

[node name="HighlightComponent" parent="." node_paths=PackedStringArray("sprite", "interactable") instance=ExtResource("5_67i0s")]
sprite = NodePath("../Sprite2D")
interactable = NodePath("../Interactable")
shader = ExtResource("6_mc28a")

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="Interactable" to="." method="_on_interactable_player_exit"]
